--- a/03/AuthorList1.html
+++ b/03/AuthorList1.html
@@ -18,6 +18,7 @@
         </thead>
 
         <tbody>
+        <!--прибрала зайвi <tbody>-->
             <tr>
                 <td>Jane Austen</td>
                 <td>Pride and Prejudice</td>
