--- a/06/HW6/menu.html
+++ b/06/HW6/menu.html
@@ -1,12 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style/menustyle.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <button>
+            <img src="img/heroicons-solid_menu-alt-2.png" alt="menu button">
+        </button>
+
+        <h1>Menu</h1>
+
+        <form action="Search">
+            <input placeholder="Search food here" type="text" id="Searchfood">
+        </form>
+
+        <div class="menu-items">
+
+            <div class="menu-position">
+                <div class="position-img">
+                    <img src="img/food.png">
+                </div>
+                <!--<h4 class="position-title">Food</h4>-->
+            </div>
+
+            <div class="menu-position">
+                <div class="position-img">
+                    <img src="img/drinks.png">
+                </div>
+                <!-- <h4  class="position-title">Drinks</h4>-->
+            </div>
+
+            <div class="menu-position">
+                <div class="position-img">
+                    <img src="img/sweet.png">
+                </div>
+
+                <!-- <h4 class="position-title">Desserts</h4>-->
+            </div>
+
+            <h3>Burger</h3>
+
+            <div class="menu-choice1">
+                <img src="img/5882482de81acb96424ffaac 1.png">
+            <!--<span></span> -->
+               <ul>
+                <h4>Big Mac</h4>
+                <p>Rs 240</p>
+               </ul>
+            </div>
+
+
+            <div class="menu-choice2">
+                <img src="img/590607a10cbeef0acff9a646 1.png">
+                <h4>KFC Double</h4>
+                <p>Rs 252</p>
+            </div>
+
+            <div class="menu-choice3">
+                <img src="img/58824b29e81acb96424ffab8 1.png">
+                <h4>Fish Burger</h4>
+                <p>Rs 220</p>
+            </div>
+        </div>
+
+
+
+
+    </div>
+
 </body>
+
 </html>
