--- a/06/HW6/menu.html
+++ b/06/HW6/menu.html
@@ -26,14 +26,14 @@
                 <div class="position-img">
                     <img src="img/food.png">
                 </div>
-                <!--<h4 class="position-title">Food</h4>-->
+
             </div>
 
             <div class="menu-position">
                 <div class="position-img">
                     <img src="img/drinks.png">
                 </div>
-                <!-- <h4  class="position-title">Drinks</h4>-->
+
             </div>
 
             <div class="menu-position">
@@ -41,38 +41,50 @@
                     <img src="img/sweet.png">
                 </div>
 
-                <!-- <h4 class="position-title">Desserts</h4>-->
+
             </div>
 
             <h3>Burger</h3>
 
-            <div class="menu-choice1">
-                <img src="img/5882482de81acb96424ffaac 1.png">
-            <!--<span></span> -->
-               <ul>
-                <h4>Big Mac</h4>
-                <p>Rs 240</p>
-               </ul>
+            <div class="menu-choice">
+
+                <img src="img/5882482de81acb96424ffaac 1.png" id="itemimg">
+
+                <div class="itemprice">
+                    <h4>Big Mac</h4>
+                    <p>Rs 240</p>
+                </div>
+
+                </div>
+
+        
+            <div class="menu-choice">
+                <img src="img/590607a10cbeef0acff9a646 1.png" id="itemimg">
+
+                <div class="itemprice">
+                    <h4>KFC Double</h4>
+                    <p>Rs 252</p>
+                </div>
+
+                </div>
+
+                <div class="menu-choice">
+                <img src="img/58824b29e81acb96424ffab8 1.png" id="itemimg">
+
+                <div class="itemprice">
+                    <h4>Fish Burger</h4>
+                    <p>Rs 220</p>
+                </div>
+
+                </div>
+
+
             </div>
 
 
-            <div class="menu-choice2">
-                <img src="img/590607a10cbeef0acff9a646 1.png">
-                <h4>KFC Double</h4>
-                <p>Rs 252</p>
-            </div>
 
-            <div class="menu-choice3">
-                <img src="img/58824b29e81acb96424ffab8 1.png">
-                <h4>Fish Burger</h4>
-                <p>Rs 220</p>
-            </div>
+
         </div>
-
-
-
-
-    </div>
 
 </body>
 
