--- a/06/HW6/menu.html
+++ b/06/HW6/menu.html
@@ -50,7 +50,7 @@
 
                 <img src="img/5882482de81acb96424ffaac 1.png" id="itemimg">
 
-                <div class="itemprice">
+                <div id="price" style="display: inline-block;">
                     <h4>Big Mac</h4>
                     <p>Rs 240</p>
                 </div>
@@ -61,7 +61,7 @@
             <div class="menu-choice">
                 <img src="img/590607a10cbeef0acff9a646 1.png" id="itemimg">
 
-                <div class="itemprice">
+                <div id="price" style="display: inline-block;">
                     <h4>KFC Double</h4>
                     <p>Rs 252</p>
                 </div>
@@ -71,7 +71,7 @@
                 <div class="menu-choice">
                 <img src="img/58824b29e81acb96424ffab8 1.png" id="itemimg">
 
-                <div class="itemprice">
+                <div id="price" style="display: inline-block;">
                     <h4>Fish Burger</h4>
                     <p>Rs 220</p>
                 </div>
