--- a/06/HW6/menu.html
+++ b/06/HW6/menu.html
@@ -48,9 +48,9 @@
 
             <div class="menu-choice">
 
-                <img src="img/5882482de81acb96424ffaac 1.png" id="itemimg">
+                <img src="img/5882482de81acb96424ffaac 1.png">
 
-                <div id="price" style="display: inline-block;">
+                <div class="price" style="display: inline-block; padding-left: 15px; padding-top: 8px;">
                     <h4>Big Mac</h4>
                     <p>Rs 240</p>
                 </div>
@@ -59,9 +59,9 @@
 
         
             <div class="menu-choice">
-                <img src="img/590607a10cbeef0acff9a646 1.png" id="itemimg">
+                <img src="img/590607a10cbeef0acff9a646 1.png">
 
-                <div id="price" style="display: inline-block;">
+                <div class="price" style="display: inline-block; padding-left: 15px; padding-top: 8px;">
                     <h4>KFC Double</h4>
                     <p>Rs 252</p>
                 </div>
@@ -69,9 +69,9 @@
                 </div>
 
                 <div class="menu-choice">
-                <img src="img/58824b29e81acb96424ffab8 1.png" id="itemimg">
+                <img src="img/58824b29e81acb96424ffab8 1.png">
 
-                <div id="price" style="display: inline-block;">
+                <div class="price" style="display: inline-block; padding-left: 0px; padding-top: 8px;">
                     <h4>Fish Burger</h4>
                     <p>Rs 220</p>
                 </div>
