--- a/09/HW/flags.html
+++ b/09/HW/flags.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="flaqgs.css">
 </head>
+
 <body>
 
     <div class="block-container1">
-        <img src="img/Vector.png" id="Diia" >
+        <img src="img/Vector.png" id="Diia">
         <div class="flag-color">
-            
+
         </div>
     </div>
 
     <div class="block-container2">
-        <img src="img/Blue.png" id="blue">
-        <img src="img/Glyph.png" id="glyph">
+
+        <img src="img/Glyph.png" id="glyph1">
 
     </div>
 
     <div class="block-container3">
-        <img src="img/Blue.png">
-        <img src="img/Glyph.png">
-    </div>class
+        <div class="circle">
+            <img src="img/Blue (1).png" id="blue1">
+            <img src="img/Glyph.png" id="Glyph2">
+        </div>
+    </div>
 
-    
+
 </body>
+
 </html>
