--- a/10/index.html
+++ b/10/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <div class="float-content clearfix">
+    <div class="float-content ">
         <div class="float-item"></div>
         <div class="float-item"></div>
     </div>
