--- a/HW10/index.html
+++ b/HW10/index.html
@@ -38,9 +38,9 @@
             <h4>Dan Burykin</h4>
             <h5>Vue.JS Developer</h5>
 
-            
+
             <d class="img-container"> 
-                <img src="img/VueJs.png" alt="VueJS">
+                <img src="img/Just Logo4.png" alt="VueJS">
             </d>
 
 
@@ -48,7 +48,20 @@
         </div>
 
         <div class="box-dev">
-            <div class="avatar"></div>
+            <img src="img/Avatar2.png">
+            <h4>Esi Doda</h4>
+            <h5>Software Developer</h5>
+
+
+            <d class="img-container2"> 
+                <img src="img/Just Logo2.png" class="logo2">
+            </d>
+            <d class="img-container3" > 
+                <img src="img/Just Logo1.png" class="logo3">
+            </d>
+            <d class="img-container4" class="logo4"> 
+                <img src="img/Just Logo.png">
+            </d>
 
         </div>
 
