--- a/HW10/index.html
+++ b/HW10/index.html
@@ -31,49 +31,69 @@
             <h3>This Product integrates with your favorite apps to automate workflows and ensure smooth, productive work
                 days.</h3>
         </div>
+        <!-- <section> -->
+            <div class="box-dev">
 
-        <div class="box-dev">
-
-            <img src="img/Avatar.png">
-            <h4>Dan Burykin</h4>
-            <h5>Vue.JS Developer</h5>
-
-
-            <d class="img-container"> 
-                <img src="img/Just Logo4.png" alt="VueJS">
-            </d>
+                <img src="img/Avatar.png">
+                <h4>Dan Burykin</h4>
+                <h5>Vue.JS Developer</h5>
 
 
-
-        </div>
-
-        <div class="box-dev">
-            <img src="img/Avatar2.png">
-            <h4>Esi Doda</h4>
-            <h5>Software Developer</h5>
+                <d class="img-container">
+                    <img src="img/Just Logo4.png" alt="VueJS">
+                </d>
 
 
-            <d class="img-container2"> 
-                <img src="img/Just Logo2.png" class="logo2">
-            </d>
-            <d class="img-container3" > 
-                <img src="img/Just Logo1.png" class="logo3">
-            </d>
-            <d class="img-container4" class="logo4"> 
-                <img src="img/Just Logo.png">
-            </d>
 
-        </div>
+            </div>
 
-        <div class="box-dev">
-            <div class="avatar"></div>
+            <div class="box-dev">
+                <img src="img/Avatar2.png">
+                <h4>Esi Doda</h4>
+                <h5>Software Developer</h5>
 
-        </div>
 
-        <div class="box-dev">
-            <div class="avatar"></div>
+                <d class="img-container2">
+                    <img src="img/Just Logo2.png" class="logo2">
+                </d>
+                <d class="img-container3">
+                    <img src="img/Just Logo1.png" class="logo3">
+                </d>
+                <d class="img-container4" class="logo4">
+                    <img src="img/Just Logo.png">
+                </d>
 
-        </div>
+            </div>
+
+            <div class="box-dev">
+                <img src="img/Avatar3.png">
+                <h4>Alex Harper</h4>
+                <h5>RN Executive</h5>
+
+
+                <d class="img-container5">
+                    <img src="img/Just Logo5.png" class="logo5">
+                </d>
+                <d class="img-container6">
+                    <img src="img/Just Logo6.png" class="logo6">
+
+            </div>
+
+            <div class="box-dev">
+                <img src="img/Avatar4.png">
+                <h4>Amarna Miller</h4>
+                <h5>Frontend Wizard</h5>
+
+
+                <d class="img-container7">
+                    <img src="img/Just Logo7.png" class="logo7">
+                </d>
+                <d class="img-container8">
+                    <img src="img/Just Logo8.png" class="logo8">
+
+
+            </div>
+        <!-- </section> -->
 
     </div>
 
