--- a/HW10/index.html
+++ b/HW10/index.html
@@ -31,7 +31,7 @@
             <h3>This Product integrates with your favorite apps to automate workflows and ensure smooth, productive work
                 days.</h3>
         </div>
-        <!-- <section> -->
+        <div class="Dev-card-blocks">
             <div class="box-dev">
 
                 <img src="img/Avatar.png">
@@ -93,7 +93,8 @@
 
 
             </div>
-        <!-- </section> -->
+       
+        </div>    
 
     </div>
 
