--- a/11/HW11/index.html
+++ b/11/HW11/index.html
@@ -34,7 +34,7 @@
                 <p>Vue.JS Developer</p>
                 <div class="skills">
                     <div class="skill-item vue">
-                        <img src="img/Just Logo4.png" alt="logo">
+                        <img class="img-logo1" src="img/Just Logo4.png" alt="logo">
                     </div>
                 </div>
             </div>
@@ -47,13 +47,13 @@
                 <p>Software Developer</p>
                 <div class="skills">
                     <div class="skill-item vue1">
-                        <img src="img/Just Logo2.png" alt="logo">
+                        <img class="img-logo2"  src="img/Just Logo2.png" alt="logo">
                     </div>
                     <div class="skill-item vue2">
-                        <img src="img/Just Logo1.png" alt="logo">
+                        <img class="img-logo3"  src="img/Just Logo1.png" alt="logo">
                     </div>
                     <div class="skill-item vue3">
-                        <img src="img/Just Logo.png" alt="logo">
+                        <img class="img-logo4"  src="img/Just Logo.png" alt="logo">
                     </div>
                 </div>
             </div>
@@ -66,10 +66,10 @@
                 <p>RN Executive</p>
                 <div class="skills">
                     <div class="skill-item vue4">
-                        <img src="img/Just Logo5.png" alt="logo">
+                        <img class="img-logo5" src="img/Just Logo5.png" alt="logo">
                     </div>
                     <div class="skill-item vue5">
-                        <img src="img/Just Logo6.png" alt="logo">
+                        <img class="img-logo6" src="img/Just Logo6.png" alt="logo">
                     </div>
                 </div>
             </div>
@@ -82,10 +82,10 @@
                 <p>Frontend Wizard</p>
                 <div class="skills">
                     <div class="skill-item vue6">
-                        <img src="img/Just Logo7.png" alt="logo">
+                        <img class="img-logo7" src="img/Just Logo7.png" alt="logo">
                     </div>
                     <div class="skill-item vue7">
-                        <img src="img/Just Logo8.png" alt="logo">
+                        <img class="img-logo8" src="img/Just Logo8.png" alt="logo">
                     </div>
                 </div>
             </div>
