--- a/13/HW13/index.html
+++ b/13/HW13/index.html
@@ -36,14 +36,12 @@
     <main>
         <section>
             <header>
-                <div class="header-content">
-                    <div class="head-block1">Rooms</div> 
-                    <div class="head-block2">
-                        <div class="sub-head1">Home</div>
-                        <div class="sub-head2">Amenities</div>
-                        <div class="sub-head3">Contact Us</div>
-                    </div> 
-                    <div class="head-block3">Category</div> 
+                <div class="header-group">
+                    <div class="helem1">Rooms</div>
+                    <div class="helem2">Home</div>
+                    <div class="helem3">Amenities</div>
+                    <div class="helem4">Contact Us</div>
+                    <div class="helem5">Category</div>
                     <img src="img/Vector.png">
                 </div>
             </header>
