--- a/16/HW16_Poster/poster.html
+++ b/16/HW16_Poster/poster.html
@@ -19,10 +19,11 @@
         <header>
             <div class="container">
             <div class="logo">
-                <img src="img/netflix-logo-png-2562 1.png">
+                <img src="img/netflix-logo-png-2562 1.png"></div>
+            <div class="date">  
                 <p>Friday July 8th</p>
-                
-            </div>
+            </div>   
+            
 
 
             <div class="header-group">
