--- a/16/HW16_Poster/poster.html
+++ b/16/HW16_Poster/poster.html
@@ -25,10 +25,7 @@
                     <p>Friday July 8th</p>
                 </div>
 
-
-
                 <div class="header-group">
-
                     <!-- <form class="search"> -->
                     <!-- <input type="search" placeholder="search" name="search" id="dearchInput"> -->
                     <!-- <button> -->
@@ -58,9 +55,9 @@
             </span>
 
             <div class="details">
-                <div class="text-block"><h3>2019</h3></div>
-                <div class="text-block"><h3>DIRECTOR:</h3> <h4>Shawn Levy</h4> </div>
-                <div class="text-block"><h3>seasons:</h3><h4>3 (5 Episodes)</h4></div>
+                <div class="text-block"><h3 class="b">2019</h3></div>
+                <div class="text-block"><h3 class="b">DIRECTOR:</h3> <h4 class="r">Shawn Levy</h4> </div>
+                <div class="text-block"><h3 class="b">seasons:</h3><h4 class="r">3 (5 Episodes)</h4></div>
             </div>
             <article> In 1980s Indiana, a group of young friends witness
                 supernatural forces and secret government exploits.
@@ -77,6 +74,8 @@
             <div class="buttons-block">
                 <button id="stream">STREAM NOW
                     <i class="fa-regular fa-play"></i>
+                </button>
+                <button id="episode">ALL EPISODES
                 </button>
                    
             </div>
