--- a/16/HW16_Poster/poster.html
+++ b/16/HW16_Poster/poster.html
@@ -23,7 +23,8 @@
                         <img src="img/netflix-logo-png-2562 1.png">
                     </div>
                     <div class="block">
-                        <p>Friday July 8th</p>
+                        <!-- <p>Friday July 8th</p> -->
+                        <img src="img/Friday July 8th.png" alt="date">
                     </div>
                 </div>
 
@@ -101,7 +102,6 @@
             </div>
             <div class="buttons-block">
                 <button id="stream">STREAM NOW
-                    <!-- <i class="fa-regular fa-play"></i> -->
                     <div class="play">
                         <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
@@ -119,8 +119,8 @@
                 <div class="slider-announce">
                     <div class="popular-block">POPULAR THIS WEEK</div>
                     <div class="slider-icons">
-                        <img src="img/Group 2.png">
-                        <img src="img/Group 1.png">
+                        <i class="fa-regular fa-chevron-left"></i>
+                        <i class="fa-regular fa-chevron-right"></i>
                     </div>
                 </div>
                 <div class="movies">
