--- a/16/HW16_Poster/poster.html
+++ b/16/HW16_Poster/poster.html
@@ -66,79 +66,81 @@
         </header>
 
         <main>
-            <div class="genre">
-                <div class="text-block">Drama</div>
-                <div class="text-block">Thriller</div>
-                <div class="text-block">Supernatural</div>
-            </div>
-            <span>
-                <h1>Stranger Things</h1>
-            </span>
+            <content-block>
+                <div class="genre">
+                    <div class="text-block">Drama</div>
+                    <div class="text-block">Thriller</div>
+                    <div class="text-block">Supernatural</div>
+                </div>
+                <span>
+                    <h1>Stranger Things</h1>
+                </span>
 
-            <div class="details">
-                <div class="text-block">
-                    <h3 class="b">2019</h3>
-                </div>
-                <div class="text-block">
-                    <h3 class="b">DIRECTOR:</h3>
-                    <h4 class="r">Shawn Levy</h4>
-                </div>
-                <div class="text-block">
-                    <h3 class="b">seasons:</h3>
-                    <h4 class="r">3 (5 Episodes)</h4>
-                </div>
-            </div>
-            <article> In 1980s Indiana, a group of young friends witness
-                supernatural forces and secret government exploits.
-                As they search for answers, the children unravel a
-                series of extraordinary mysteries.
-            </article>
-            <div class="review">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-regular fa-star"></i>
-                <i class="fa-regular fa-star"></i>
-            </div>
-            <div class="buttons-block">
-                <button id="stream">STREAM NOW
-                    <div class="play">
-                        <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M14 0C6.26875 0 0 6.26875 0 14C0 21.7313 6.26875 28 14 28C21.7313 28 28 21.7313 28 14C28 6.26875 21.7313 0 14 0ZM18.5031 14.2156L11.6781 19.1812C11.6407 19.2081 11.5966 19.2242 11.5507 19.2276C11.5047 19.2311 11.4587 19.2218 11.4177 19.2008C11.3767 19.1798 11.3422 19.1479 11.3182 19.1087C11.2941 19.0694 11.2813 19.0242 11.2812 18.9781V9.05313C11.2811 9.00696 11.2937 8.96165 11.3178 8.92222C11.3418 8.8828 11.3762 8.85079 11.4173 8.82976C11.4584 8.80873 11.5046 8.79948 11.5506 8.80305C11.5966 8.80663 11.6408 8.82288 11.6781 8.85L18.5031 13.8125C18.5354 13.8353 18.5617 13.8655 18.5798 13.9006C18.598 13.9357 18.6075 13.9746 18.6075 14.0141C18.6075 14.0536 18.598 14.0925 18.5798 14.1275C18.5617 14.1626 18.5354 14.1928 18.5031 14.2156Z"
-                                fill="white" />
-                        </svg>
+                <div class="details">
+                    <div class="text-block">
+                        <h3 class="b">2019</h3>
                     </div>
-                </button>
-                <button id="episode">ALL EPISODES
-                </button>
-
-            </div>
-
-            <div class="slider-block">
-                <div class="slider-announce">
-                    <div class="popular-block">POPULAR THIS WEEK</div>
-                    <div class="slider-icons">
-                        <i class="fa-regular fa-chevron-left"></i>
-                        <i class="fa-regular fa-chevron-right"></i>
+                    <div class="text-block">
+                        <h3 class="b">DIRECTOR:</h3>
+                        <h4 class="r">Shawn Levy</h4>
+                    </div>
+                    <div class="text-block">
+                        <h3 class="b">seasons:</h3>
+                        <h4 class="r">3 (5 Episodes)</h4>
                     </div>
                 </div>
-                <div class="movies">
-                    <img src="img/Rectangle 6.png">
-                    <img src="img/Rectangle 7.png">
-                    <img src="img/Rectangle 8.png">
-                    <img src="img/Rectangle 9 (1).png">
-                    <img src="img/Rectangle 11.png">
+                <article> In 1980s Indiana, a group of young friends witness
+                    supernatural forces and secret government exploits.
+                    As they search for answers, the children unravel a
+                    series of extraordinary mysteries.
+                </article>
+                <div class="review">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                    <i class="fa-regular fa-star"></i>
+                </div>
+                <div class="buttons-block">
+                    <button id="stream">STREAM NOW
+                        <div class="play">
+                            <svg width="28" height="28" viewBox="0 0 28 28" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M14 0C6.26875 0 0 6.26875 0 14C0 21.7313 6.26875 28 14 28C21.7313 28 28 21.7313 28 14C28 6.26875 21.7313 0 14 0ZM18.5031 14.2156L11.6781 19.1812C11.6407 19.2081 11.5966 19.2242 11.5507 19.2276C11.5047 19.2311 11.4587 19.2218 11.4177 19.2008C11.3767 19.1798 11.3422 19.1479 11.3182 19.1087C11.2941 19.0694 11.2813 19.0242 11.2812 18.9781V9.05313C11.2811 9.00696 11.2937 8.96165 11.3178 8.92222C11.3418 8.8828 11.3762 8.85079 11.4173 8.82976C11.4584 8.80873 11.5046 8.79948 11.5506 8.80305C11.5966 8.80663 11.6408 8.82288 11.6781 8.85L18.5031 13.8125C18.5354 13.8353 18.5617 13.8655 18.5798 13.9006C18.598 13.9357 18.6075 13.9746 18.6075 14.0141C18.6075 14.0536 18.598 14.0925 18.5798 14.1275C18.5617 14.1626 18.5354 14.1928 18.5031 14.2156Z"
+                                    fill="white" />
+                            </svg>
+                        </div>
+                    </button>
+                    <button id="episode">ALL EPISODES
+                    </button>
+
                 </div>
 
-                <div class="side-block">
-                    <div class="red"></div>
-                    <div class="grey">
-                        <p>16+</p>
+                <div class="slider-block">
+                    <div class="slider-announce">
+                        <div class="popular-block">POPULAR THIS WEEK</div>
+                        <div class="slider-icons">
+                            <i class="fa-solid fa-chevron-left"></i>
+                            <i class="fa-solid fa-chevron-right"></i>
+                        </div>
+                    </div>
+                    <div class="movies">
+                        <img src="img/Rectangle 6.png">
+                        <img src="img/Rectangle 7.png">
+                        <img src="img/Rectangle 8.png">
+                        <img src="img/Rectangle 9 (1).png">
+                        <img src="img/Rectangle 11.png">
+                    </div>
+
+                    <div class="side-block">
+                        <div class="red"></div>
+                        <div class="grey">
+                            <p>16+</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-
+            </content-block>
         </main>
 
 
