--- a/16/HW16_Poster/poster.html
+++ b/16/HW16_Poster/poster.html
@@ -43,7 +43,7 @@
 
                 </div>
             </div>
-                
+
         </header>
 
         <main>
@@ -102,8 +102,8 @@
                     <div class="slider-announce">
                         <div class="popular-block">POPULAR THIS WEEK</div>
                         <div class="slider-icons">
-                            <i class="fa-solid fa-chevron-left"></i>
-                            <i class="fa-solid fa-chevron-right"></i>
+                            <button class="left_icon"><i class="fa-solid fa-chevron-left"></i></button>
+                            <button class="right_icon"><i class="fa-solid fa-chevron-right"></i></button>
                         </div>
                     </div>
                     <div class="movies">
@@ -123,11 +123,6 @@
                 </div>
             </div>
         </main>
-
-
-
-
-
 
 </body>
 
