--- a/17/HW17_Shoes_page/Shoes.html
+++ b/17/HW17_Shoes_page/Shoes.html
@@ -23,99 +23,151 @@
 
 <body>
     <div class="content-container">
-        <div class="header-block"></div>
-        <header>
-            <div class="menu-nav">
+        <div class="header-group">
+
+            <div class="desktop">
                 <a class="menu-bar" href="#"><i class="fa-solid fa-bars"></i></a>
-                <div class="logo">Shoppy</div>
-                <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-                <a class="nav-basket" href="#"><i class="fa-solid fa-basket-shopping"></i></a>
+                <div class="link-nav"><a href="#">Women</a></div>
+                <div class="link-nav"><a href="#">Men</a></div>
+                <div class="link-nav"><a href="#">Kids</a></div>
+                <div class="link-nav"><a href="#">Accessories</a></div>
+                <div class="link-nav"><a href="#">Sales</a></div>
             </div>
-        </header>
-        <div class="img-block">
-            <div class="shoes-logo-img1"><img src="img/Vector (7).png" alt="left-shoe"></div>
-            <div class="shoes-logo-img2"><img src="img/Vector (8).png " alt="right-shoe"></div>
+            <div class="mobile">
+                <!-- <a class="menu-bar" href="#"><i class="fa-solid fa-bars"></i></a> -->
+                <div class="logo">Shoppy</div>
+                <div class="header-search-basket">
+                    <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                    <a href="#"><i class="fa-solid fa-basket-shopping"></i></a>
+                </div>
+            </div>
         </div>
-        <div class="text-block">
-            <h1>Build for flight</h1>
-            <p class="main-text">Introducing product name.
-                Our lighest shoe ever.
-            </p>
-            <button id="shop-button">SHOP NOW</button>
+
+        <div class="desktop-img-text">
+
+            <div class="img-block">
+                <div class="shoes-logo-img1"><img src="img/Vector (2).svg" alt="left-shoe"></div>
+                <div class="shoes-logo-img2"><img src="img/Vector (10).png" alt="right-shoe"></div>
+            </div>
+
+            <div class="text-block">
+                <h1>Build for flight</h1>
+                <p class="main-text">Introducing product name.
+                    Our lighest shoe ever.
+                </p>
+                <button id="shop-button">SHOP NOW</button>
+            </div>
         </div>
+
+
         <div class="shop-now">
             <div class="img-block1">
-                <h2>Women</h2>
+                <img src="img/Rectangle 9 (3).png">
+                <h2 class="woman">Women</h2>
                 <a href="#">Shop now</a>
             </div>
             <div class="img-block2">
-                <h2>Men</h2>
+                <img src="img/Rectangle 10 (1).png">
+                <h2 class="men">Men</h2>
                 <a href="#">Shop now</a>
             </div>
         </div>
 
+
         <h3>New Releases</h3>
         <div class="scroll-block">
             <div class="new-release">
-                <div class="block1">
-                    <img src="img/Rectangle 11 (3).png">
+                <div class="block">
+                    <img src="img/Rectangle 17.png">
                     <p class="item-name">Product name</p>
                     <p class="item-price">$299 USD</p>
                 </div>
-                <div class="block2">
-                    <img src="img/Rectangle 11 (2).png">
+                <div class="block">
+                    <img src="img/Rectangle 19.png">
+                    <p class="item-name">Product name</p>
+                    <p class="item-price">$299 USD</p>
+                </div>
+                <div class="block">
+                    <img src="img/Rectangle 20.png">
+                    <p class="item-name">Product name</p>
+                    <p class="item-price">$299 USD</p>
+                </div>
+                <div class="block">
+                    <img src="img/Rectangle 21.png">
+                    <p class="item-name">Product name</p>
+                    <p class="item-price">$299 USD</p>
+                </div>
+                <div class="block">
+                    <img src="img/Rectangle 22.png">
                     <p class="item-name">Product name</p>
                     <p class="item-price">$299 USD</p>
                 </div>
             </div>
+
         </div>
-        <h3>Top Kicks</h3>
-        <div class="scroll-block2">
-            <div class="new-release">
-                <div class="block1">
-                    <img src="img/Rectangle 14.png">
-                    <p class="item-name">Product name</p>
-                    <p class="item-price">$299 USD</p>
-                </div>
-                <div class="block2">
-                    <img src="img/Rectangle 12.png">
-                    <p class="item-name">Product name</p>
-                    <p class="item-price">$299 USD</p>
-                </div>
+    
+    <h3>Top Kicks</h3>
+    <div class="scroll-block2">
+        <div class="new-release">
+            <div class="block">
+                <img src="img/Rectangle 23.png">
+                <p class="item-name">Product name</p>
+                <p class="item-price">$299 USD</p>
+            </div>
+            <div class="block">
+                <img src="img/Rectangle 24.png">
+                <p class="item-name">Product name</p>
+                <p class="item-price">$299 USD</p>
+            </div>
+            <div class="block">
+                <img src="img/Rectangle 25.png">
+                <p class="item-name">Product name</p>
+                <p class="item-price">$299 USD</p>
+            </div>
+            <div class="block">
+                <img src="img/Rectangle 26.png">
+                <p class="item-name">Product name</p>
+                <p class="item-price">$299 USD</p>
+            </div>
+            <div class="block">
+                <img src="img/Rectangle 27.png">
+                <p class="item-name">Product name</p>
+                <p class="item-price">$299 USD</p>
             </div>
         </div>
-        <div class="text-block2">
-            <h1>Never miss a drop.</h1>
-            <p class="main-text">Receive updates about our new products and promotion.
-            </p>
-            <button id="join">JOIN MAILING LIST</button>
-        </div>
-        <footer>
-            <div class="footer-content">
-                <div class="about">
-                    <h4>MY ACCOUNT</h4>
-                    <p>Sign in</p>
-                    <p>Register</p>
-                    <p>Order status</p>
-                </div>
-                <div class="about">
-                    <h4>HELP</h4>
-                    <p>Shipping</p>
-                    <p>Returns</p>
-                    <p>Sizing</p>
-                </div>
-                <div class="about">
-                    <h4>ABOUT</h4>
-                    <p>Our story</p>
-                    <p>Media</p>
-                    <p>Sustainability</p>
-                </div>
-                <div class="about">
-                    <h4>LEGAL STUFF</h4>
-                    <p>Terms of use</p>
-                    <p>Terms of sales</p>
-                    <p>Privacy policy</p>
-                </div>
+    </div>
+    <div class="text-block2">
+        <h1>Never miss a drop.</h1>
+        <p class="main-text">Receive updates about our new products and promotion.
+        </p>
+        <button id="join">JOIN MAILING LIST</button>
+    </div>
+
+    <footer>
+        <div class="footer-content">
+            <div class="about">
+                <h4>MY ACCOUNT</h4>
+                <p>Sign in</p>
+                <p>Register</p>
+                <p>Order status</p>
+            </div>
+            <div class="about">
+                <h4>HELP</h4>
+                <p>Shipping</p>
+                <p>Returns</p>
+                <p>Sizing</p>
+            </div>
+            <div class="about">
+                <h4>ABOUT</h4>
+                <p>Our story</p>
+                <p>Media</p>
+                <p>Sustainability</p>
+            </div>
+            <div class="about">
+                <h4>LEGAL STUFF</h4>
+                <p>Terms of use</p>
+                <p>Terms of sales</p>
+                <p>Privacy policy</p>
             </div>
             <div class="follow-block">
                 <h4>FOLLOW US</h4>
@@ -124,10 +176,15 @@
                 <div class="label"><img src="img/Vector (6).png" alt="twitter"></div>
                 <div class="label"><img src="img/Group 3.png" alt="linkedin"></div>
             </div>
-            <div class="additional">
-                <h5>2020 Shoppy Inc. All Right Reserved</h5>
-            </div>
-        </footer>
+        </div>
+        
+        <div class="additional">
+            <h5>2020 Shoppy Inc. All Right Reserved</h5>
+        </div>
+    </footer>
+</div>
+    </div>
+
 </body>
 
 </html>
