--- a/18/HW18/travel.html
+++ b/18/HW18/travel.html
@@ -27,9 +27,9 @@
                 <p>We offer the best and relaxing atmosphere and have one of the best deal to sweeten your vacation and
                     make it a trip to remember. We have luxurious destinations around the world.</p>
             </div>
-            <div class="img-block">
-                <img src="img/Image.png" alt="tourist">
-            </div>
+            <!-- <div class="img-block">
+                <img src="Image (1).png" alt="tourist">
+            </div> -->
         </section>
         <div class="select-section">
             <h3>Where we will take you</h3><img src="img/chevron-right.png">
@@ -54,7 +54,7 @@
                 <option value="Place">Beach</option>
                 <option value="Place">Mountain</option>
             </select>
-            <button>Seach Place</button>
+            <button id="search">Seach Place</button>
         </div>
         <div class="see-options">
             <h3>See Destinations</h3>
