--- a/17/HW17_Shoes_page/Shoes.html
+++ b/17/HW17_Shoes_page/Shoes.html
@@ -105,84 +105,86 @@
             </div>
 
         </div>
-    
-    <h3>Top Kicks</h3>
-    <div class="scroll-block2">
-        <div class="new-release">
-            <div class="block">
-                <img src="img/Rectangle 23.png">
-                <p class="item-name">Product name</p>
-                <p class="item-price">$299 USD</p>
-            </div>
-            <div class="block">
-                <img src="img/Rectangle 24.png">
-                <p class="item-name">Product name</p>
-                <p class="item-price">$299 USD</p>
-            </div>
-            <div class="block">
-                <img src="img/Rectangle 25.png">
-                <p class="item-name">Product name</p>
-                <p class="item-price">$299 USD</p>
-            </div>
-            <div class="block">
-                <img src="img/Rectangle 26.png">
-                <p class="item-name">Product name</p>
-                <p class="item-price">$299 USD</p>
-            </div>
-            <div class="block">
-                <img src="img/Rectangle 27.png">
-                <p class="item-name">Product name</p>
-                <p class="item-price">$299 USD</p>
-            </div>
-        </div>
-    </div>
-    <div class="text-block2">
-        <h1>Never miss a drop.</h1>
-        <p class="main-text">Receive updates about our new products and promotion.
-        </p>
-        <button id="join">JOIN MAILING LIST</button>
-    </div>
 
-    <footer>
-        <div class="footer-content">
-            <div class="about">
-                <h4>MY ACCOUNT</h4>
-                <p>Sign in</p>
-                <p>Register</p>
-                <p>Order status</p>
-            </div>
-            <div class="about">
-                <h4>HELP</h4>
-                <p>Shipping</p>
-                <p>Returns</p>
-                <p>Sizing</p>
-            </div>
-            <div class="about">
-                <h4>ABOUT</h4>
-                <p>Our story</p>
-                <p>Media</p>
-                <p>Sustainability</p>
-            </div>
-            <div class="about">
-                <h4>LEGAL STUFF</h4>
-                <p>Terms of use</p>
-                <p>Terms of sales</p>
-                <p>Privacy policy</p>
-            </div>
-            <div class="follow-block">
-                <h4>FOLLOW US</h4>
-                <div class="label"><img src="img/Vector (5).png" alt="facebook"></div>
-                <div class="label"><img src="img/Group 4.png" alt="instagram"></div>
-                <div class="label"><img src="img/Vector (6).png" alt="twitter"></div>
-                <div class="label"><img src="img/Group 3.png" alt="linkedin"></div>
+        <h3>Top Kicks</h3>
+        <div class="scroll-block2">
+            <div class="new-release">
+                <div class="block">
+                    <img src="img/Rectangle 23.png">
+                    <p class="item-name">Product name</p>
+                    <p class="item-price">$299 USD</p>
+                </div>
+                <div class="block">
+                    <img src="img/Rectangle 24.png">
+                    <p class="item-name">Product name</p>
+                    <p class="item-price">$299 USD</p>
+                </div>
+                <div class="block">
+                    <img src="img/Rectangle 25.png">
+                    <p class="item-name">Product name</p>
+                    <p class="item-price">$299 USD</p>
+                </div>
+                <div class="block">
+                    <img src="img/Rectangle 26.png">
+                    <p class="item-name">Product name</p>
+                    <p class="item-price">$299 USD</p>
+                </div>
+                <div class="block">
+                    <img src="img/Rectangle 27.png">
+                    <p class="item-name">Product name</p>
+                    <p class="item-price">$299 USD</p>
+                </div>
             </div>
         </div>
-        
-        <div class="additional">
-            <h5>2020 Shoppy Inc. All Right Reserved</h5>
+        <div class="text-block2">
+            <h1>Never miss a drop.</h1>
+            <p class="main-text">Receive updates about our new products and promotion.
+            </p>
+            <button id="join">JOIN MAILING LIST</button>
         </div>
-    </footer>
-</div>
+
+        <footer>
+            <div class="footer-flex">
+                <div class="footer-content">
+                    <div class="about">
+                        <h4>MY ACCOUNT</h4>
+                        <p>Sign in</p>
+                        <p>Register</p>
+                        <p>Order status</p>
+                    </div>
+                    <div class="about">
+                        <h4>HELP</h4>
+                        <p>Shipping</p>
+                        <p>Returns</p>
+                        <p>Sizing</p>
+                    </div>
+                    <div class="about">
+                        <h4>ABOUT</h4>
+                        <p>Our story</p>
+                        <p>Media</p>
+                        <p>Sustainability</p>
+                    </div>
+                    <div class="about">
+                        <h4>LEGAL STUFF</h4>
+                        <p>Terms of use</p>
+                        <p>Terms of sales</p>
+                        <p>Privacy policy</p>
+                    </div>
+
+                </div>
+                <div class="follow-block">
+                    <h4>FOLLOW US</h4>
+                    <div class="label"><img src="img/Vector (5).png" alt="facebook"></div>
+                    <div class="label"><img src="img/Group 4.png" alt="instagram"></div>
+                    <div class="label"><img src="img/Vector (6).png" alt="twitter"></div>
+                    <div class="label"><img src="img/Group 3.png" alt="linkedin"></div>
+                </div>
+            </div>
+            <div class="additional">
+                <h5>2020 Shoppy Inc. All Right Reserved</h5>
+            </div>
+        </footer>
+    </div>
     </div>
 
 </body>
